--- a/ingress.yaml
+++ b/ingress.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: p0-namespace
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: rrr.com
@@ -18,6 +17,13 @@ spec:
                 name: mongo-express-service
                 port:
                   number: 8081
+          - path: /api/users
+            pathType: Prefix
+            backend:
+              service:
+                name: p0-auth-service
+                port:
+                  number: 8080
 # ---
 # apiVersion: v1
 # kind: Service
